working version of dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+body {
+  @apply transition-colors duration-200;
+}
+
+.dark body {
+  @apply bg-dark text-dark;
+}
